[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcdppy"
version = "0.0.1"
authors = [
  { name="Minsung Kim", email="spongbob9876@naver.com" },
]
description = "Minecraft Datapack Python Library"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
"Homepage" = "https://github.com/McDic/MCDPPY"
