[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcdil"
version = "0.0.1"
authors = [
  { name="Minsung Kim", email="spongbob9876@naver.com" },
]
description = "McDic's Language for Minecraft JE Datapack"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
license = {file = "LICENSE"}
keywords = ["minecraft", "language", "compiler"]

[project.urls]
"Homepage" = "https://github.com/McDic/MCDIL"

[project.scripts]
parse = "mcdil:cli_parse"
compile = "mcdil:cli_compile"
